--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
   "devDependencies": {
     "@jupiterone/integration-sdk-core": "^5.11.0",
     "@jupiterone/integration-sdk-dev-tools": "^5.11.0",
-    "@jupiterone/integration-sdk-testing": "^5.11.0"
+    "@jupiterone/integration-sdk-testing": "^5.11.0",
+    "@types/node-fetch": "^2.5.10"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
