--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jupiterone/integration-template",
+  "name": "@jupiterone/graph-sonarqube",
   "version": "0.0.0",
-  "description": "A JupiterOne Integration",
+  "description": "Sonarqube integration for JupiterOne",
   "license": "MPL-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
