--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupiterone/graph-sonarqube",
-  "version": "2.0.0-0",
+  "version": "3.0.0-beta.0",
   "description": "Sonarqube integration for JupiterOne",
   "license": "MPL-2.0",
   "main": "dist/index.js",
