--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupiterone/graph-sonarqube",
-  "version": "1.0.0-beta.4",
+  "version": "1.0.1",
   "description": "Sonarqube integration for JupiterOne",
   "repository": {
     "type": "git",
