--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "./node_modules/@jupiterone/integration-sdk-dev-tools/config/typescript",
   "compilerOptions": {
     "outDir": "dist",
-    "lib": ["dom", "es2015"]
+    "lib": ["dom"]
   },
   "exclude": ["dist"]
 }
