.env-example file updated

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ ENABLE_FINDINGS_INGESTION=true/false
 # INFO, MINOR -> LOW in API Version 2
 # MAJOR -> MEDIUM in API Version 2
 # CRITICAL BLOCKERS -> HIGH in API Version 2
-SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER # 0 or more values you can pass from given values
+# 0 or more values you can pass from given values
+SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER
 
 # JUST FOR INFO: 
 # OPEN -> OPEN in API Version 2
@@ -14,7 +15,8 @@ SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER # 0 or more values you can pass fro
 # REOPENED ->  FALSE_POSITIVE' in API Version 2
 # RESOLVED -> ACCEPTED' in API Version 2
 # CLOSED -> FIXED in API Version 2
-STATUS=OPEN,CONFIRMED,REOPENED,RESOLVED,CLOSED # 0 or more values you can pass from given values
+# 0 or more values you can pass from given values
+STATUS=OPEN,CONFIRMED,REOPENED,RESOLVED,CLOSED 
 
 #createdInLast: optional
 #To retrieve issues created during a time span before the current time (exclusive). Accepted units are 'y' for year, 'm' for month, 'w' for week and 'd' for day. If this parameter is set, createdAfter must not be set
