--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "./node_modules/@jupiterone/integration-sdk-dev-tools/config/typescript",
   "compilerOptions": {
-    "outDir": "dist",
-    "lib": ["dom"]
+    "outDir": "dist"
   },
   "exclude": ["dist"]
 }
