--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ STATUS=OPEN,CONFIRMED,REOPENED,RESOLVED,CLOSED
 #createdInLast: optional
 #To retrieve issues created during a time span before the current time (exclusive). Accepted units are 'y' for year, 'm' for month, 'w' for week and 'd' for day. If this parameter is set, createdAfter must not be set
 # Example value: 1m2w (1 month 2 weeks)
-CREATED_IN_LAST=10d # default value is 10 days 
+FINDINGS_INGEST_SINCE_DAYS=90 # default value is 90 days 
 
 # CODE_SMELL -> MAINTAINABILITY in API Version 2 
 # BUG -> RELIABILITY in API Version 2 				
