updated the variables name

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ ENABLE_FINDINGS_INGESTION=true/false
 # MAJOR -> MEDIUM in API Version 2
 # CRITICAL BLOCKERS -> HIGH in API Version 2
 # 0 or more values you can pass from given values
-SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER
+FINDING_SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER
 
 # OPEN -> OPEN in API Version 2
 # CONFIRMED -> CONFIRMED' in API Version 2
@@ -14,7 +14,7 @@ SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER
 # RESOLVED -> ACCEPTED' in API Version 2
 # CLOSED -> FIXED in API Version 2
 # 0 or more values you can pass from given values
-STATUS=OPEN,CONFIRMED,REOPENED,RESOLVED,CLOSED 
+FINDING_STATUS=OPEN,CONFIRMED,REOPENED,RESOLVED,CLOSED 
 
 #createdInLast: optional
 #To retrieve issues created during a time span before the current time (exclusive). Accepted units are 'y' for year, 'm' for month, 'w' for week and 'd' for day. If this parameter is set, createdAfter must not be set
@@ -24,4 +24,4 @@ FINDINGS_INGEST_SINCE_DAYS=90 # default value is 90 days
 # CODE_SMELL -> MAINTAINABILITY in API Version 2 
 # BUG -> RELIABILITY in API Version 2 				
 # VULNERABILITY: SECURITY in API Version 2			
-TYPES=CODE_SMELL,BUG,VULNERABILITY # 0 or more values you can pass from given values
+FINDING_TYPES=CODE_SMELL,BUG,VULNERABILITY # 0 or more values you can pass from given values
