updated example file

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 BASE_URL=
 API_TOKEN=
 ENABLE_FINDINGS_INGESTION=true/false 
-
+# [Optioanl]
 # INFO, MINOR -> LOW in API Version 2
 # MAJOR -> MEDIUM in API Version 2
 # CRITICAL BLOCKERS -> HIGH in API Version 2
 # 0 or more values you can pass from given values
 FINDING_SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER
-
+# [Optioanl]
 # OPEN -> OPEN in API Version 2
 # CONFIRMED -> CONFIRMED' in API Version 2
 # REOPENED ->  FALSE_POSITIVE' in API Version 2
@@ -15,12 +15,11 @@ FINDING_SEVERITIES=INFO,MINOR,MAJOR,CRITICAL,BLOCKER
 # CLOSED -> FIXED in API Version 2
 # 0 or more values you can pass from given values
 FINDING_STATUS=OPEN,CONFIRMED,REOPENED,RESOLVED,CLOSED 
-
-#createdInLast: optional
+# [Optioanl]
 #To retrieve issues created during a time span before the current time (exclusive). Accepted units are 'y' for year, 'm' for month, 'w' for week and 'd' for day. If this parameter is set, createdAfter must not be set
-# Example value: 1m2w (1 month 2 weeks)
-FINDINGS_INGEST_SINCE_DAYS=90 # default value is 90 days 
-
+# Example value: any number -> 30 60 90 ...
+FINDINGS_INGEST_SINCE_DAYS=
+# [Optioanl]
 # CODE_SMELL -> MAINTAINABILITY in API Version 2 
 # BUG -> RELIABILITY in API Version 2 				
 # VULNERABILITY: SECURITY in API Version 2			
